# uavrt_supervisor

./: .gitignore  README.md  Telemetry_File_2022-04-07 04:23:33.txt  Telemetry_File_2022-04-07 04:48:29.txt  Telemetry_File_2022-04-07 04:48:49.txt  Telemetry_File_2022-04-07 05:27:49.txt  mavlink_helper.py  package.xml  setup.cfg  setup.py  summer_2022_task_list.md  supervisor.py  supervisor_bags.py  supervisor_publishers.py  supervisor_servicers.py  task_list.md  telemetryfile.py
archive/: README.md
custom_interfaces/: CMakeLists.txt  README.md  package.xml
custom_interfaces/include/custom_interfaces/: README.md
custom_interfaces/msg/: README.md
custom_interfaces/src/: README.md
custom_interfaces/srv/: GetPose.srv  README.md
data_streaming/: package.xml
data_streaming/data_streaming/: supervisor_publishers.py  supervisor_subscribers.py
flight/: README.md
flight/detectors/: README.md
flight/processed/: README.md
flight/vehicle/: README.md
generated_flights/: README.md
py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: client_member_function.py
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/srv/: GetPose.srv
src/data_streaming/: setup.cfg  setup.py
src/data_streaming/data_streaming/: mavlink_helper.py  supervisor.py  supervisor_publishers.py  supervisor_servicers.py  test.py
supervisor/: package.xml  setup.py
supervisor/supervisor/: mavlink_helper.py  mavlink_utilities.py  supervisor.py  supervisor_bags.py  supervisor_publishers.py  supervisor_servicers.py
test_client/: package.xml  setup.cfg  setup.py
test_client/test_client/: client.py
uavrt_supervisor/: airspy_csdr_netcat_component.py  airspyhf_channelize_component.py  channelizer_component.py  detector_component.py  enum_members_values.py  main.py  netcat_airspyhf_component.py  start_stop_component.py  supervisor.py  supervisor_servicers.py  tag_digest_component.py  test_harness.py  tuner.py  updated_tuner.py
