<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_streaming</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.shafer@nau.edu">Dr. Michael Shafer</maintainer>
  <maintainer email="mba75@nau.edu">Matthew Amato-Yarbrough</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE Version 3</license>

  # ROS2 libraries #
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>

  # Default tests #
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
